--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     />
     <meta name="copyright" content="罗辑" />
     <meta name="author" content="罗辑" />
-    <meta name="reply-to" content="core-ling.cn" />
+    <meta name="reply-to" content="https://zlh-lily.github.io/luoJi/" />
     <meta property="og:image" content="" />
     <meta name="og:title" content="罗辑" />    
-    <meta name="og:url" content="http://core-ling.cn/" />
-    <link rel="shortcut icon" href="/source/plugin/favicon.ico">
+    <meta name="og:url" content="https://zlh-lily.github.io/luoJi/" />
+    <link rel="shortcut icon" href="/favicon.ico">
     <title>罗辑 v1.0</title>
     <style>
       body {
