--- a/index.html
+++ b/index.html
@@ -74,22 +74,22 @@
   		<p class="hezi">Hello, I'm Luo Ji, gender: male, a good young man who works hard.</p>
   		<p class="hezi">生日是 1899年1月1日</p>  	
   		<p class="hezi">My birthday is January 1, 1899</p>
-	    <p class="hezi">所在地是 塞尔维亚,黑山-贝尔格莱德</p>
-	    <p class="hezi">My location is Belgrade, Montenegro, Serbia</p>
-	    <p class="hezi">我的家乡是 俄罗斯-乌里扬诺夫斯克</p>
-	    <p class="hezi">My hometown is Russia-Ulyanovsk</p>
-	    <p class="hezi">我的职业是 其他，秘密，不便露</p>
-	    <p class="hezi">My profession is Other, secret, inconvenient to reveal</p>
-	    <hr />
-	    <p class="hezi">我的公司是 The Trump Organization</p>
-	    <p class="hezi">My company is The Trump Organization</p>
-	    <p class="hezi">我的邮箱是 秘密，不便露</p>
-	    <p class="hezi">My email address is secret and inconvenient to reveal</p>
-	    <p class="hezi">我的空间是 超弦理论空间</p>
-	    <p class="hezi">My space is the superstring theory space</p>
-	    
-	    <p class="hezi">我的大学是 圣马家沟职业技术学院</p>
-	    <p class="hezi">My university is San Majiagou Vocational and Technical College</p>
+	        <p class="hezi">所在地是 塞尔维亚,黑山-贝尔格莱德</p>
+	        <p class="hezi">My location is Belgrade, Montenegro, Serbia</p>
+    	        <p class="hezi">我的家乡是 俄罗斯-乌里扬诺夫斯克</p>
+	        <p class="hezi">My hometown is Russia-Ulyanovsk</p>
+	        <p class="hezi">我的职业是 其他，秘密，不便露</p>
+	        <p class="hezi">My profession is Other, secret, inconvenient to reveal</p>
+	        <hr />
+	        <p class="hezi">我的公司是 The Trump Organization</p>
+	        <p class="hezi">My company is The Trump Organization</p>
+	        <p class="hezi">我的邮箱是 秘密，不便露</p>
+	        <p class="hezi">My email address is secret and inconvenient to reveal</p>
+	        <p class="hezi">我的空间是 超弦理论空间</p>
+	        <p class="hezi">My space is the superstring theory space</p>
+	        <p class="hezi">我的大学是 圣马家沟职业技术学院</p>
+	        <p class="hezi">My university is San Majiagou Vocational and Technical College</p>
+	        <p><img src="https://s1.ax1x.com/2023/07/02/pCDWccj.jpg" alt="哈尔滨工业大学"/></p>
   	</zhuneirong>
   	<dibulan>
   		<p>copyright © 罗辑</p>
