--- a/index.html
+++ b/index.html
@@ -63,6 +63,15 @@
         "Microsoft YaHei UI","Microsoft YaHei", Arial, sans-serif;
         color: #666;
       }
+
+      himg {
+      	
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+	    
     </style>
   </head>
   <body>
@@ -89,7 +98,9 @@
 	        <p class="hezi">My space is the superstring theory space</p>
 	        <p class="hezi">我的大学是 圣马家沟职业技术学院</p>
 	        <p class="hezi">My university is San Majiagou Vocational and Technical College</p>
-	        <p><img src="https://s1.ax1x.com/2023/07/02/pCDWccj.jpg" alt="哈尔滨工业大学"/></p>
+	        <div class="himg">
+	    	<img src="https://s1.ax1x.com/2023/07/02/pCDWccj.jpg" alt="哈尔滨工业大学" width="390px" height="216px"/>
+	    </div>
   	</zhuneirong>
   	<dibulan>
   		<p>copyright © 罗辑</p>
