--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
   </head>
   <body>
   	<touxianglan>
-  		<img src="https://s1.ax1x.com/2023/07/02/pCDt4Ds.jpg" alt="logo" width="239px" height="200px">
+  		<img src="images/luoji_tx1" alt="logo" width="239px" height="200px">
+		<!-- https://s1.ax1x.com/2023/07/02/pCDt4Ds.jpg -->
   	</touxianglan>
   	<zhuneirong>
   		<p class="hezi">你好啊，我是罗辑，性别：男，一名努力上进的好青年。</p>
