--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   </head>
   <body>
   	<touxianglan>
-  		<img src="images/luoji_tx1" alt="logo" width="239px" height="200px">
+  		<img src="images/luoji_tx1.jpg" alt="logo" width="239px" height="200px">
 		<!-- https://s1.ax1x.com/2023/07/02/pCDt4Ds.jpg -->
   	</touxianglan>
   	<zhuneirong>
