--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main>
       <article>
         <div>
-          <button class="button"><span><a href="https://zlh-lily.github.io/luoJi/" target="_blank"><strong>个人网站 v1.0</strong></a></span></button>
+          <button class="button"><span><a href="https://zlh-lily.github.io/luoJi/luoJi_v1.0.html" target="_blank"><strong>个人网站 v1.0</strong></a></span></button>
         </div>
         
       </article>
