--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     </main>
       
       <footer>
+	      <p>copyright © 罗辑</p>
       </footer>
       
     <script src="scripts/main.js" defer></script>
