--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </main>
       
       <footer>
-	      <p>copyright © 罗辑</p>
+	      <p class="dibu">copyright © 罗辑</p>
       </footer>
       
     <script src="scripts/main.js" defer></script>
