--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
       </article>
     </main>
       
-      <footer>
-	      <p class="dibu">copyright © 罗辑</p>
-      </footer>
+      <div class="wrapper">
+   		 <div class="content">copyright © 罗辑</div>
+   		 <div class="footer"></div>  <!--这是页脚区块-->
+      </div>
+
       
     <script src="scripts/main.js" defer></script>
 	
