--- a/index.html
+++ b/index.html
@@ -24,10 +24,7 @@
       </article>
     </main>
       
-      <div class="wrapper">
-   		 <div class="content">copyright © 罗辑</div>
-   		 <div class="footer"></div>  <!--这是页脚区块-->
-      </div>
+    <div class="footer abs-bottom">copyright © 罗辑</div>
 
       
     <script src="scripts/main.js" defer></script>
